// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelsBanner > matches snapshot with active status selected 1`] = `
<DocumentFragment>
  <div
    class="models-by-solutions"
  >
    <div
      class="bg-primary-lighter radius-md padding-2"
    >
      <div
        class="grid-row flex-align-center"
        data-testid="grid"
      >
        <div
          class="tablet:grid-col-6 desktop:grid-col-7"
          data-testid="grid"
        >
          <h3
            class="margin-y-1"
          >
             4innovation (4i)
          </h3>
        </div>
        <div
          class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
          data-testid="grid"
        >
          <ul
            class="usa-button-group usa-button-group--segmented"
          >
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Total
                </div>
                <div
                  data-testid="total-count"
                >
                  4
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Planned
                </div>
                <div
                  data-testid="planned-count"
                >
                  2
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2 bg-primary-darker"
                data-testid="button"
                type="button"
              >
                <div>
                  Active
                </div>
                <div
                  data-testid="active-count"
                >
                  1
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Ended
                </div>
                <div
                  data-testid="ended-count"
                >
                  1
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelsBanner > matches snapshot with group type 1`] = `
<DocumentFragment>
  <div
    class="models-by-solutions"
  >
    <div
      class="bg-primary-lighter radius-md padding-2"
    >
      <div
        class="grid-row flex-align-center"
        data-testid="grid"
      >
        <div
          class="tablet:grid-col-6 desktop:grid-col-7"
          data-testid="grid"
        >
          <h3
            class="margin-y-1"
          >
            CMMI/PCMG
          </h3>
        </div>
        <div
          class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
          data-testid="grid"
        >
          <ul
            class="usa-button-group usa-button-group--segmented"
          >
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2 bg-primary-darker"
                data-testid="button"
                type="button"
              >
                <div>
                  Total
                </div>
                <div
                  data-testid="total-count"
                >
                  4
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Planned
                </div>
                <div
                  data-testid="planned-count"
                >
                  2
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Active
                </div>
                <div
                  data-testid="active-count"
                >
                  1
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Ended
                </div>
                <div
                  data-testid="ended-count"
                >
                  1
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelsBanner > matches snapshot with solution type 1`] = `
<DocumentFragment>
  <div
    class="models-by-solutions"
  >
    <div
      class="bg-primary-lighter radius-md padding-2"
    >
      <div
        class="grid-row flex-align-center"
        data-testid="grid"
      >
        <div
          class="tablet:grid-col-6 desktop:grid-col-7"
          data-testid="grid"
        >
          <h3
            class="margin-y-1"
          >
             4innovation (4i)
          </h3>
        </div>
        <div
          class="tablet:grid-col-6 desktop:grid-col-5 models-by-solutions__banner-buttons row-reverse"
          data-testid="grid"
        >
          <ul
            class="usa-button-group usa-button-group--segmented"
          >
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2 bg-primary-darker"
                data-testid="button"
                type="button"
              >
                <div>
                  Total
                </div>
                <div
                  data-testid="total-count"
                >
                  4
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Planned
                </div>
                <div
                  data-testid="planned-count"
                >
                  2
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Active
                </div>
                <div
                  data-testid="active-count"
                >
                  1
                </div>
              </button>
            </li>
            <li
              class="usa-button-group__item"
            >
              <button
                class="usa-button padding-y-2"
                data-testid="button"
                type="button"
              >
                <div>
                  Ended
                </div>
                <div
                  data-testid="ended-count"
                >
                  1
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
